# python_vibe

./: LICENSE  README.md  pyproject.toml  setup.cfg
examples/: data_pipeline.py  fastapi_demo.py  simple_script.py  training_loop.py
src/python_vibe/: __init__.py  core.py  dashboard.py  themes.py  utils.py
tests/: test_core.py
