[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-vibe"
version = "0.1.0"
description = "make your boring python scripts look like a movie"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Nightmare-De9", email = "nightmarehdh@proton.me" }
]
keywords = ["terminal", "cli", "rich", "pretty", "logging", "tui", "vibe"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Terminals",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "rich>=13.0.0",
]

[project.optional-dependencies]
full = [
  "textual>=0.40.0",
  "psutil>=5.9.0",
]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "black",
  "ruff",
  "textual>=0.40.0",
  "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/Nightmare-De9/python_vibe"
Repository = "https://github.com/Nightmare-De9/python_vibe"
Issues = "https://github.com/Nightmare-De9/python_vibe/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/python_vibe"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
